Index.html finished

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>NEW YORK TIME SEARCH</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+</head>
+<body>
+    <header> NEW YORK TIMES SEARCH</header>
+    <div class="container">
+        <div class="row">
+            <div class="col md 12">
+                
+                <div> Search Parameters
+                <input type="text">
+                </div>
+               <div> Number of Records to Retrieve:
+                <input type="number">
+                </div>
+                <div> STart Year (Optional):
+                <input type="text">
+                </div>
+                <div> End Year (Optional):
+                <input type="text">
+                </div>
+                
+            </div>
+        </div>
+    </div>
+    <P> <span>Top Articles</span> </P>
+<script src="https://code.jquery.com/jquery-3.4.1.js"integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="crossorigin="anonymous"></script>
+<script src="/Assets/script.js"></script>
+</body>
+</html>
