--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NEW YORK TIME SEARCH</title>
+    <link rel = "stylesheet" href = "Assets/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
@@ -14,16 +15,16 @@
         <div class="row">
             <div class="col md 12">
                 
-                <div> Search Parameters
+                <div id="searchP"> Search Parameters
                 <input type="text">
                 </div>
-               <div> Number of Records to Retrieve:
+               <div id="numRecords"> Number of Records to Retrieve:
                 <input type="number">
                 </div>
-                <div> STart Year (Optional):
+                <div id="startYear"> STart Year (Optional):
                 <input type="text">
                 </div>
-                <div> End Year (Optional):
+                <div id="endYear"> End Year (Optional):
                 <input type="text">
                 </div>
                 
