--- a/Index.html
+++ b/Index.html
@@ -33,6 +33,8 @@
             </div>
         </div>
     </div>
+    <button id="searchBox">Search</button>
+    <button id="clearbtn"> Clear Results</button>
     <P> <span>Top Articles</span> </P>
 <script src="https://code.jquery.com/jquery-3.4.1.js"integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="crossorigin="anonymous"></script>
 <script src="./Assets/script.js"></script>
